Update CORSConfig.java